fixed the horizontal scroll issue when the mobile menu is opened

--- a/src/style/theme/components/_navbar.scss
+++ b/src/style/theme/components/_navbar.scss
@@ -15,7 +15,7 @@
                 max-height: 100vh;
                 overflow-y: auto;
             }
-            .menu-opened {
+            &.menu-opened {
                 .get-it-now-banner {
                     display: none !important;
                 }
